<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InternetActivity">

    <ImageView
        android:id="@+id/internet_sub_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/internet_interface_icon_foreground"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/internet_sub_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/internet_sub_icon"
        android:layout_marginTop="20dp"
        >

        <EditText
            android:id="@+id/scut_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/scut_ip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/scut_netmask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/netmask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scut_ip"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/scut_gateway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scut_netmask"
            android:layout_marginTop="10dp"
            android:hint="@string/gateway" />

        <EditText
            android:id="@+id/scut_dns1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scut_gateway"
            android:layout_marginTop="10dp"
            android:hint="@string/dns_1" />

        <EditText
            android:id="@+id/scut_dns2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scut_dns1"
            android:layout_marginTop="10dp"
            android:hint="@string/dns_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/save_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/internet_sub_layout"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>